--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="#">LinkedIn</a>
         </li>
         <li style="--i:2;" data-icon="&#xe533">
-            <a href="#">Contato</a>
+            <a href="https://api.whatsapp.com/send/?phone=559884489641&text&type=phone_number&app_absent=0">Contato</a>
         </li>
         
     </ul>
