--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sobre-mim</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -15,12 +15,10 @@
         <div class="content">
             <h2>Sobre</h2>
             <p>
-                Olá! Meue é Italo e sou um desenvolvedor júnior focado em front-end.
+                Olá! Meu nome é Italo e sou um estudant front-end.
                  Trabalho principalmente com tecnologias web como HTML, CSS e JavaScript.
                  Estou apaixonado por criar interfaces interativas e responsivas para websites.
             </p>
-        
-            <a href="https://www.youtube.com/watch?v=QKdzcrGmF24&list=RDEMifrBNzFyUEj-1vohOXMJsA&index=12">LinkedIn</a>
         </div>
         <img src="../assests/image/perfil.jpg">
     </div>
