--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="pages/qualifi.html">Qualificações</a>
         </li>
         <li style="--i:3;" data-icon="&#xf07f">
-            <a href="#">LinkedIn</a>
+            <a href="https://www.linkedin.com/feed/?trk=guest_homepage-basic_google-one-tap-submit">LinkedIn</a>
         </li>
         <li style="--i:2;" data-icon="&#xe533">
             <a href="https://api.whatsapp.com/send/?phone=559884489641&text&type=phone_number&app_absent=0">Contato</a>
