--- a/pages/qualifi.html
+++ b/pages/qualifi.html
@@ -14,6 +14,7 @@
                 <img src="/assests/image/img4.jpg">
                 <img src="/assests/image/img6.jpg" >
                 <img src="/assests/image/iconjava.png" >
+                <img src="/assests/image/2758737.png" >
             </div>
         </div>
     </section>
