--- a/pages/qualifi.html
+++ b/pages/qualifi.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Qualificações</title>
     <link rel="stylesheet" href="style1.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <section caixa>
@@ -18,12 +19,24 @@
             </div>
         </div>
     </section>
-    
-    <div class="caixa2">
+     <div class="caixa2">
         <button class="shadow__btn"> 
             <a href="https://cursos.alura.com.br/user/kaynanramosa1
             /fullCertificate/a77eb4dc4f05894bf7ea02d53aa40d64">Certificados</a>
         </button>
+    </div>
+    <div class="caixas">
+    <div id="carousel" style="font-size: 20px;">
+        <h1 class="cert"><strong>Projetos</strong></h1>
+        <figure id="spinner">
+            <img src="imags/tela1.png">
+            <img src="imags/tela2.png">
+            <img src="imags/tela3.png">
+            
+          </figure>
+    </div>
+    <span style="float:left" class="ss-icon" onclick="galleryspin('-')">&lt;</span>
+    <span style="float:right" class="ss-icon" onclick="galleryspin('')">&gt;</span>
     </div>
 </body>
 </html>
