--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </ul>
    </nav>
     <div class="rei">
-        <h1>Bem vindo ao meu portifolio</h1>
+        <h1>Bem vindo ao meu portfólio</h1>
 
     </button>
     </div>
